--- a/Homework1.ipynb
+++ b/Homework1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPio8z4dSIi3oMgdAbkEByl",
+      "authorship_tag": "ABX9TyMZKOS/09BMLcVAG8x2mZj3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,8 @@
         "## Main topics:\n",
         "\n",
         "\n",
+        "\n",
+        "*   Linear Spaces\n",
         "*   Orthonormailty\n",
         "*   Gram-schmidt Process\n",
         "*   Eigenvalues\n",
@@ -53,6 +55,119 @@
       },
       "execution_count": 1,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The following code demonstartes an understanding of linear spaces\n",
+        "\n",
+        "It checks if a vectors are closed under vector addiction and scalar multiplication and if the vectors form a linear subspace"
+      ],
+      "metadata": {
+        "id": "3qJDorFoyMBN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "v1 = np.array([1, 2, 3])\n",
+        "v2 = np.array([4, 5, 6])\n",
+        "v3 = np.array([7, 8, 9])\n",
+        "\n",
+        "v_sum = v1 + v2\n",
+        "print(\"Vector Addition:\")\n",
+        "print(f\"v1 + v2 = {v_sum}\")\n",
+        "\n",
+        "scalar = 3\n",
+        "v_scaled = scalar * v1\n",
+        "print(\"\\nScalar Multiplication:\")\n",
+        "print(f\"{scalar} * v1 = {v_scaled}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LvmXlzbDyK_j",
+        "outputId": "9af8a702-5eb8-45a3-f40c-9d70f271e7ee"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Vector Addition:\n",
+            "v1 + v2 = [5 7 9]\n",
+            "\n",
+            "Scalar Multiplication:\n",
+            "3 * v1 = [3 6 9]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def is_subspace(vectors):\n",
+        "    zero_vector = np.zeros_like(vectors[0])\n",
+        "    if not np.any([np.array_equal(v, zero_vector) for v in vectors]):\n",
+        "        return False, \"The set does not include the zero vector.\"\n",
+        "\n",
+        "    for i in range(len(vectors)):\n",
+        "        for j in range(i, len(vectors)):\n",
+        "            if not np.any([np.array_equal(vectors[i] + vectors[j], v) for v in vectors]):\n",
+        "                return False, \"The set is not closed under addition.\"\n",
+        "\n",
+        "    for v in vectors:\n",
+        "        for scalar in [2, -1]:\n",
+        "            if not np.any([np.array_equal(scalar * v, u) for u in vectors]):\n",
+        "                return False, \"The set is not closed under scalar multiplication.\"\n",
+        "\n",
+        "    return True, \"The set forms a subspace.\""
+      ],
+      "metadata": {
+        "id": "5dm092j0y_3Y"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vector_set = np.array([v1, v2, v3])\n",
+        "\n",
+        "is_subspace_result, message = is_subspace(vector_set)\n",
+        "print(\"\\nSubspace Check:\")\n",
+        "print(message)\n",
+        "\n",
+        "valid_subspace = np.array([v1, v2, v1 + v2, np.zeros(3)])\n",
+        "\n",
+        "is_valid_subspace, valid_message = is_subspace(valid_subspace)\n",
+        "print(\"\\nValid Subspace Check:\")\n",
+        "print(valid_message)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kny6Q5zQzDEd",
+        "outputId": "12b732ed-f9d3-4f7c-8e96-c0175ccbb14b"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Subspace Check:\n",
+            "The set does not include the zero vector.\n",
+            "\n",
+            "Valid Subspace Check:\n",
+            "The set is not closed under addition.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -157,8 +272,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
-        "\n",
         "A = np.array([[4, -2],\n",
         "              [1,  1]])\n",
         "\n",
